infrastructure/mining/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mining
  labels:
    name: mining
